--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "better-scroll": "^2.0.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
